--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint src/**/*.js",
-    "lint:fix": "eslint src/**/*.js --fix"
+    "lint:fix": "eslint src/**/*.js --fix",
+    "cleanup:files": "node scripts/cleanupDeletedFiles.js"
   },
   "dependencies": {
     "axios": "^1.12.2",
