--- a/backend/.env
+++ b/backend/.env
@@ -14,7 +14,7 @@ JWT_REFRESH_EXPIRE=30d
 
 # 文件上传配置
 MAX_FILE_SIZE=2147483648
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp,video/mp4,video/webm,audio/mp3,audio/wav,application/pdf,text/plain,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp,image/svg+xml,image/tiff,image/bmp,video/mp4,video/webm,video/quicktime,video/x-msvideo,audio/mp3,audio/wav,audio/ogg,audio/aac,application/pdf,text/plain,text/csv,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/zip,application/x-rar-compressed,application/x-7z-compressed,application/json,application/xml
 UPLOAD_PATH=./uploads
 
 # 云存储配置（可选）
