--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "File Social Platform Team",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.12.2"
+    "axios": "^1.12.2",
+    "nodemon": "^3.1.10"
   }
 }
